# aidockermon

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  main.py  requirements.txt  setup.cfg  setup.py  test.sh
aidockermon/: __init__.py  aidockermon.py  handlers.py  settings.py  utils.py
etc/: __init__.py  config.yml  mappings.json
etc/cron.d/: aidockermon
etc/grafana/: grafana.json
etc/syslog-ng/: aidockermon.conf  syslog-ng.conf
syslog-ng/: aidockermon.conf
