[bdist_wheel]
universal = 1

[metadata]
name = aidockermon
author = wqy
author_email = qiyingwangwqy@gmail.com
description = Monitor system load of the server running the nvidia/cuda docker containers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WqyJh/aidockermon
keywords = docker, nvidia/cuda, linux, monitor
license_files = LICENSE
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[options]
include_package_data = True
packages = find:


[options.package_data]
* = *.txt, *.rst, *.md
